[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["knil-sama <cols.knil@gmail.com>"]
readme = "README.md"
packages = [
    {include = "models"},
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.4.2"
pydantic-extra-types = "2.1.0"

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
pytest-env = "0.8.2"
pytest-mock = "3.11.1"
pytest-cov = "4.1.0"
pytest-fail-slow = "0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
